--- a/staticfiles_build/static/css/main.css
+++ b/staticfiles_build/static/css/main.css
@@ -864,74 +864,101 @@ h3.my-profession
     padding:0 50px;
 
 }
-@media (max-width:1199px)
-{
-    .section .container
-    {
+@media (max-width: 1199px) {
+    .section .container {
         padding-top: 70px;
     }
-    .aside
-    {
+
+    .aside {
         left: -270px;
     }
-    .aside.open
-    {
+
+    .aside.open {
         left: 0;
     }
-    .aside .nav-toggler
-    {
+
+    .aside .nav-toggler {
         display: flex;
         left: 30px;
     }
-    .aside .nav-toggler.open
-    {
+
+    .aside .nav-toggler.open {
         left: 300px;
     }
-    .section
-    {
-        left:0 ;
+
+    .section {
+        left: 0;
     }
-    .section.open
-    {
+
+    .section.open {
         left: 270px;
     }
-    .about .about-content .personal-info .info-item p span
-    {
-    display: block;
-    margin-left: 0;
+
+
+    /* Adjust the following selector according to your project structure */
+    .about.about-content .personal-info .info-item p span {
+        display: block;
+        margin-left: 0;
     }
 }
-@media (max-width:991px)
-{
+
+/* Media Queries for Phones (max-width: 991px) */
+@media (max-width: 991px) {
+
     .contact .contact-info-item,
     .project .project-item,
-    .service .service-item
-    {
-        flex:0 0 100%;
+    .service .service-item {
+        flex: 0 0 50%;
         max-width: 50%;
     }
-    .home .home-info
-    {
-        flex:0 0 100%;
+
+    .home .home-info {
+        flex: 0 0 100%;
         max-width: 100%;
     }
-    .home .home-img
-    {
+
+    .home .home-img {
         display: none;
     }
 }
-@media (max-width:767px)
-{
-    .contact .contact-form .col-6, 
+
+/* Media Queries for Small Screens (max-width: 767px) */
+@media (max-width: 767px) {
+
+    .contact .contact-form .col-6,
     .contact .contact-info-item,
     .project .project-item,
     .service .service-item,
     .about .about-content .experience,
     .about .about-content .education,
     .about .about-content .skills,
-    .about .about-content .personal-info
-    {
-        flex:0 0 100%;
+    .about.about-content .personal-info {
+        flex: 0 0 100%;
         max-width: 100%;
+    }
+}
+
+/* Media Queries for Extra Small Screens (max-width: 575px) */
+@media (max-width: 575px) {
+
+    .contact .contact-form .col-6,
+    .contact .contact-info-item,
+    .project .project-item,
+    .service .service-item,
+    .about .about-content .experience,
+    .about .about-content .education,
+    .about .about-content .skills,
+    .about.about-content .personal-info {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .contact .contact-form .form-item .form-control {
+        height: 40px;
+    }
+
+    .contact .contact-form .btn {
+        height: 40px;
+        padding: 0 30px;
     }
 }
