--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Ankit |Portfolio</title>
-    <!-- CSS file s -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8" />
+    <title>Portfolio | Ankit Kumar</title>
+   <!-- CSS file s -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
@@ -34,7 +36,7 @@
                 </div>
             </div>
             <div class="logo">
-                <a href="#"><span>A</span>ankit</a>
+                <a href="https://myportfolio-rho-lyart.vercel.app/"><span>A</span>ankit</a>
             </div>
 
             <div class="nav-toggler">
