--- a/templates/home.html
+++ b/templates/home.html
@@ -414,7 +414,7 @@
                             <div class="project-item-inner shadow-dark">
                                <div class="project-img">
                                     <img src="{% static 'img/project1.jpeg' %}" alt="Project 1">
-                                    <a href="https://github.com/ankit-kumar-art/Myportfolio.git"><i class="fas fa-link"></i>Code</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                                    <a href="https://github.com/ankit-kumar-art/Myportfolio.git"><i class="fas fa-link"></i>Code</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                                     <a href="https://myportfolio-rho-lyart.vercel.app"><i class="fas fa-cog fa-spin"></i>Live Demo</i></a>
                                 </div>
                             </div>
