add second project

--- a/templates/home.html
+++ b/templates/home.html
@@ -413,14 +413,26 @@
                         <div class="project-item">
                             <div class="project-item-inner shadow-dark">
                                 <div class="project-img">
-                                    <img src="{% static 'img/project1.jpeg' %}" alt="Project 1">
+                                    <img src="{% static 'img/project2.jpeg' %}" alt="Project 2">
+                                    <a href="https://github.com/ankit-kumar-art/Myportfolio.git"><i class="fas fa-link"></i>Code</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                                    <a href="https://ecommerce-django-project.vercel.app/"><i class="fas fa-cog fa-spin"></i>Live Demo</i></a>
                                 </div>
                             </div>
                         </div>
                         <!-- Project item End -->
 
                         <!-- Project item start -->
-                </div>
+                        <div class="project-item">
+                            <div class="project-item-inner shadow-dark">
+                                <div class="project-img">
+                                    <img src="{% static 'img/project1.jpeg' %}" alt="Project 1">
+                                    <a href="https://github.com/ankit-kumar-art/Myportfolio.git"><i class="fas fa-link"></i>Code</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                                    <a href="https://myportfolio-rho-lyart.vercel.app"><i class="fas fa-cog fa-spin"></i>Live Demo</i></a>
+                                </div>
+                            </div>
+                         </div>
+                          <!-- Project item End -->
+                    </div>
 
             </section>
             <!-- Projects Section End-->
