--- a/static/css/main.css
+++ b/static/css/main.css
@@ -172,6 +172,19 @@ padding-left:270px;
     background: var(--skin-color);
     transition: all 0.3s ease;
 }
+ /* .btn 
+{
+    width: 100%;
+    height: 100%;
+    color:var(--skin-color);
+    border-radius: 30px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-decoration: none;
+    transition: 0.5px;
+    overflow: hidden;
+    backdrop-filter: blur(15px);
+} */
 .btn:hover
 {
     transform: scale(1.05);
