ading project details

--- a/templates/home.html
+++ b/templates/home.html
@@ -413,6 +413,18 @@
                         <div class="project-item">
                             <div class="project-item-inner shadow-dark">
                                 <div class="project-img">
+                                    <h4>Ecommerce Website</h4>
+                                    <h6>Made with:<span> HTML CSS JS BOOTSTRAP  POSTGREsql DJANGO </span></h6>
+                                    <p>🛍 A feature-rich E-commerce Website developed using the (Django,PostgreSql,Html,Css,js,BootStrap)</p>
+                                    <p>🌐 Backend & Database: Python and Django power the backend, Postgresql serves as the database for storing product information.</p>
+                                    <p>🔒 User Authentication: Implemented secure user authentication and authorization for protecting user data and transactions.</p> 
+                                    <p>💳 Payment Gateway: Integrated Stripe as the payment gateway for seamless and secure transactions.</p>  
+                                    <p>🛒 Product Management: Admins have the capability to add, edit, and update products, including managing product and payment states.</p>
+                                    <p> 🔄 Real-time Updates: Admins can manually update the state of products and payment statuses in real-time.</p>   
+                                    <p>🛠 Scalable Code: The application is built with scalability in mind, ensuring smooth maintenance and future enhancements.</p>   
+                                    <p>🛒 User Experience: Users can easily filter, add products to the cart, and place orders after providing necessary address and payment details.</p>   
+                                    <p> 🎨Styling: BootStrap CSS is used for styling, providing a clean and responsive design for an enhanced user interface.</p>   
+                                    <p>📝 Form Handling: Utilized  Form or ModelForm classes for efficient and performant form handling and validation.</p>   
                                     <img src="{% static 'img/project2.jpg' %}" alt="Project 2">
                                     <a href="https://github.com/ankit-kumar-art/Myportfolio.git"><i class="fas fa-link"></i>Code</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                                     <a href="https://ecommerce-django-project.vercel.app/"><i class="fas fa-cog fa-spin"></i>Live Demo</i></a>
@@ -425,6 +437,15 @@
                         <div class="project-item">
                             <div class="project-item-inner shadow-dark">
                                 <div class="project-img">
+                                    <h4>Portfolio</h4>
+                                    <h6>Made with:<span> HTML CSS JS DJANGO </span></h6>
+                                    <p>✨ Explore my interactive portfolio built with HTML CSS JAVASCRIPT and DJANGO.
+                                    <p>🎨 Stylish UI: Features a sleek and modern user interface with styled components and animations.
+                                    <!-- <p>🚀 Built with DJANGO: Take advantage of the benefits of server-side rendering, automatic code splitting, and seamless deployments. -->
+                                    <p>🌈 Dark Mode: Experience the website in a dark mode for a comfortable viewing experience in low-light conditions.
+                                    <!-- <p>🔧 Animation with GSAP: Implemented animations using GSAP to enhance the user experience. -->
+                                    <!-- <p>⚙️: Utilizes TypeScript for type safety and improved code quality. -->
+                                    <p>🔄 Dynamic Content: Content updates dynamically, providing a seamless and engaging browsing experience.
                                     <img src="{% static 'img/project1.jpeg' %}" alt="Project 1">
                                     <a href="https://github.com/ankit-kumar-art/Myportfolio.git"><i class="fas fa-link"></i>Code</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                                     <a href="https://myportfolio-rho-lyart.vercel.app"><i class="fas fa-cog fa-spin"></i>Live Demo</i></a>
@@ -433,6 +454,7 @@
                          </div>
                           <!-- Project item End -->
                     </div>
+                </div>
 
             </section>
             <!-- Projects Section End-->
