--- a/templates/home.html
+++ b/templates/home.html
@@ -74,7 +74,7 @@
                             <p>I'm a fresh graduate super excited about web development, both the front and back ends. I'm all about diving into cool web framework like django and restAPI,Now,
                                 i am Proficient in Html ,Css ,JavaScript ,ReactJS ,BootStrap and python/django.
                             </p>
-                            <a href="#" class="btn">Download CV</a>
+                            <a href="https://drive.google.com/file/d/1AivpDAyBYU3Wa4aVP1NxsEFD3-I9I21j/view?usp=sharing" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="{% static 'img/profile1.jpg' %}" alt="Profile Image">
