--- a/templates/home.html
+++ b/templates/home.html
@@ -413,11 +413,11 @@
                         <div class="project-item">
                             <div class="project-item-inner shadow-dark">
                                 <div class="project-img">
-                                    <h4>Tic Tac Toe</h4>
+                                    <h4>Tic-Tac-Toe Game</h4>
                                     <h6>Made with:<span> HTML CSS JavaScript </span></h6>
                                     <img src="{% static 'img/Tic_Tac.png' %}" alt="Project 1">
                                     <a href="https://github.com/ankit-kumar-art/Tic-Tac-Toe-Game.git"><i class="fas fa-link"></i>Code</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-                                    <a href=https://tic-tac-toe-8-game.netlify.app/"><i class="fas fa-cog fa-spin"></i>Live Demo</i></a>
+                                    <a href="https:tic-tac-toe-8-game.netlify.app"><i class="fas fa-cog fa-spin"></i>Live Demo</i></a>
                                 </div>
                             </div>
                          </div>
