--- a/templates/home.html
+++ b/templates/home.html
@@ -415,7 +415,7 @@
                                 <div class="project-img">
                                     <h4>Rock-Paper-Scissors Game</h4>
                                     <h6>Made with:<span> HTML CSS JavaScript </span></h6>
-                                    <img src="{% static 'img/Rock.jpg' %}" alt="Project 1">
+                                    <img src="{% static 'img/rock.jpg' %}" alt="Project 1">
                                     <a href="https://github.com/ankit-kumar-art/Rock-Paper-Scissors-Game.git"><i class="fas fa-link"></i>Code</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                                     <a href="https://rock-paper-scissorssss.netlify.app/"><i class="fas fa-cog fa-spin"></i>Live Demo</i></a>
                                 </div>
